tests/spec/core_functions/color/rgba/error/one_arg.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/rgba/error/one_arg.hrx"

mod list {

    // Ignoring "bracketed", error tests are not supported yet.

    // Ignoring "comma_separated", error tests are not supported yet.

    // Ignoring "empty", error tests are not supported yet.

    // Ignoring "four_elements", error tests are not supported yet.

    // Ignoring "one_element", error tests are not supported yet.

    // Ignoring "two_elements", error tests are not supported yet.
}

// Ignoring "quoted_var_slash", error tests are not supported yet.
mod test_type {

    // Ignoring "blue", error tests are not supported yet.

    // Ignoring "green", error tests are not supported yet.

    // Ignoring "red", error tests are not supported yet.
}
